feat(home): add Benefits section

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -17,6 +17,9 @@
   "HEADER_BUTTON": "Get a free demo",
   "HERO_TITLE": "Unleash your Restaurant’s Success!",
   "HERO_SUBTITLE": "<strong>Increase sales, orders, & maximize profits.</strong> Try our personalized ordering system and experience the best direct online ordering service for your restaurant <strong>#FoxExperience.</strong>",
+  "FIRST_BENEFIT": "Get more orders with our tools",
+  "SECOND_BENEFIT": "Increase your sales in Relay",
+  "THIRD_BENEFIT": "Average savings in commissions",
   "OWNER_FORM": {
     "TITLE": "Are you the owner or manager of the restaurant?",
     "DESCRIPTION": "This form allows restaurant owners or managers to sign up for a free demo of our services.",
