feat(Restaurants): add section to homepage

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -20,6 +20,7 @@
   "FIRST_BENEFIT": "Get more orders with our tools",
   "SECOND_BENEFIT": "Increase your sales in Relay",
   "THIRD_BENEFIT": "Average savings in commissions",
+  "RESTAURANTS_TITLE": "Trusted by more than <br /><span class='text-5xl font-bold'>5000 restaurants!</span>",
   "OWNER_FORM": {
     "TITLE": "Are you the owner or manager of the restaurant?",
     "DESCRIPTION": "This form allows restaurant owners or managers to sign up for a free demo of our services.",
