--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -20,6 +20,7 @@
   "FIRST_BENEFIT": "En incremento en ordenes en linea",
   "SECOND_BENEFIT": "En incremento para tus llamadas en relevo",
   "THIRD_BENEFIT": "Adicional en ahorros de comisiones",
+  "RESTAURANTS_TITLE": "Nos prefieren <br /><span class='text-5xl font-bold'>Más de 5000 restaurantes</span>",
   "OWNER_FORM": {
     "TITLE": "¿Eres el dueño o gerente del restaurante?",
     "DESCRIPTION": "Este formulario permite a los dueños o gerentes de restaurantes registrarse para una demostración gratuita de nuestros servicios.",
