--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -21,6 +21,24 @@
   "SECOND_BENEFIT": "En incremento para tus llamadas en relevo",
   "THIRD_BENEFIT": "Adicional en ahorros de comisiones",
   "RESTAURANTS_TITLE": "Nos prefieren <br /><span class='text-5xl font-bold'>Más de 5000 restaurantes</span>",
+  "ACCOMPLISHMENTS_TEXT": "Descubre la esencia de Fox Ordering y sus logros.",
+  "ACCOMPLISHMENTS_BUTTON": "Sobre Nosotros",
+  "ACCOMPLISHMENTS_INC_5000_2021": {
+    "YEAR": "2021",
+    "POSITION": "#830"
+  },
+  "ACCOMPLISHMENTS_INC_5000_2022": {
+    "YEAR": "2022",
+    "POSITION": "#218"
+  },
+  "ACCOMPLISHMENTS_INC_5000_2023": {
+    "YEAR": "2023",
+    "POSITION": "#120"
+  },
+  "ACCOMPLISHMENTS_DELOITTE_2023": {
+    "YEAR": "2023",
+    "POSITION": "#41"
+  },
   "OWNER_FORM": {
     "TITLE": "¿Eres el dueño o gerente del restaurante?",
     "DESCRIPTION": "Este formulario permite a los dueños o gerentes de restaurantes registrarse para una demostración gratuita de nuestros servicios.",
