--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -22,7 +22,7 @@
   "THIRD_BENEFIT": "Average savings in commissions",
   "RESTAURANTS_TITLE": "Trusted by <br /><span class='text-5xl font-bold'>more than 5000 restaurants!</span>",
   "ACCOMPLISHMENTS_TEXT": "Embark on a journey to discover the essence of Fox Ordering and its extraordinary accomplishments.",
-  "ACCOMPLISHMENTS_BUTTON": "About Us",
+  "ACCOMPLISHMENTS_BUTTON": "Learn everything about us",
   "ACCOMPLISHMENTS_INC_5000_2021": {
     "YEAR": "2021",
     "POSITION": "#830"
@@ -39,6 +39,11 @@
     "YEAR": "2023",
     "POSITION": "#41"
   },
+  "TESTIMONIAL_TITLE": "Success Stories",
+  "TESTIMONIAL_TEXT": "&quot;Felicitamos a Fox Ordering por sus esfuerzos por ayudarnos a incrementar nuestras ventas, estamos muy satisfechos y contentos con su servicio. Gracias&quot;",
+  "TESTIMONIAL_OWNER": "Atzin Guzman",
+  "TESTIMONIAL_RESTAURANT": "Rivas Mexican Grill",
+  "TESTIMONIAL_LOCATION": "Nevada, Utah y California",
   "OWNER_FORM": {
     "TITLE": "Are you the owner or manager of the restaurant?",
     "DESCRIPTION": "This form allows restaurant owners or managers to sign up for a free demo of our services.",
