feat(WhyFox): add section to homepage

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -20,6 +20,20 @@
   "FIRST_BENEFIT": "Get more orders with our tools",
   "SECOND_BENEFIT": "Increase your sales in Relay",
   "THIRD_BENEFIT": "Average savings in commissions",
+  "WHY_FOX_TITLE": "Why Fox Ordering?",
+  "WHY_FOX_SUBTITLE": "The best direct online ordering service",
+  "WHY_FOX_1": "1",
+  "WHY_FOX_1_TITLE": "Lowest Commission in the Market:",
+  "WHY_FOX_1_TEXT": "We’re here to help your business grow and maximize profits. Our small convenience fee is 5% over subtotal order value.",
+  "WHY_FOX_2": "2",
+  "WHY_FOX_2_TITLE": "No Contracts  No Clauses:",
+  "WHY_FOX_2_TEXT": "There’s no strings attached with us! Enjoy our benefits for as long as you like.",
+  "WHY_FOX_3": "3",
+  "WHY_FOX_3_TITLE": "Website Tailored just for You:",
+  "WHY_FOX_3_TEXT": "Allow your customers to order directly from your website, browse your menu, and access promotional discounts.",
+  "WHY_FOX_4": "4",
+  "WHY_FOX_4_TITLE": "Increase Direct Sales:",
+  "WHY_FOX_4_TEXT": "Our system is user-friendly and easy to navigate. We provide training and support to help you get started.",
   "RESTAURANTS_TITLE": "Trusted by <br /><span class='text-5xl font-bold'>more than 5000 restaurants!</span>",
   "ACCOMPLISHMENTS_TEXT": "Embark on a journey to discover the essence of Fox Ordering and its extraordinary accomplishments.",
   "ACCOMPLISHMENTS_BUTTON": "Learn everything about us",
