--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -20,6 +20,20 @@
   "FIRST_BENEFIT": "En incremento en ordenes en linea",
   "SECOND_BENEFIT": "En incremento para tus llamadas en relevo",
   "THIRD_BENEFIT": "Adicional en ahorros de comisiones",
+  "WHY_FOX_TITLE": "¿Por qué Fox Ordering?",
+  "WHY_FOX_SUBTITLE": "El mejor servicio de ordenes en linea directo",
+  "WHY_FOX_1": "1",
+  "WHY_FOX_1_TITLE": "La comisión mas baja del mercado:",
+  "WHY_FOX_1_TEXT": "Estamos aquí para contribuir al crecimiento de tu restaurante e incrementar tus ganancias. Manejamos la tasa mas baja del mercado de un 5%.",
+  "WHY_FOX_2": "2",
+  "WHY_FOX_2_TITLE": "Sin contratos, sin clausulas.",
+  "WHY_FOX_2_TEXT": "¡Sin compromisos! Disfruta de nuestros beneficios durante el tiempo que desees.",
+  "WHY_FOX_3": "3",
+  "WHY_FOX_3_TITLE": "Pagina web hecha a tu medida:",
+  "WHY_FOX_3_TEXT": "Permite que tus clientes hagan pedidos directamente desde tu sitio web, naveguen por tu menú y accedan a descuentos promocionales.",
+  "WHY_FOX_4": "4",
+  "WHY_FOX_4_TITLE": "Incrementa tus ventas directas:",
+  "WHY_FOX_4_TEXT": "Impulsa tus ventas con nuestra plataforma de pedidos directos, segura, rápida y confiable. Nos aseguramos de que recibas el pago cada semana.",
   "RESTAURANTS_TITLE": "Nos prefieren <br /><span class='text-5xl font-bold'>Más de 5000 restaurantes</span>",
   "ACCOMPLISHMENTS_TEXT": "Descubre la esencia de Fox Ordering y sus logros.",
   "ACCOMPLISHMENTS_BUTTON": "Sobre Nosotros",
