feat(OrderOnline): add page and sections

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -6,6 +6,8 @@
     "WHAT_WE_OFFER_DESCRIPTION": "Discover the benefits of Fox Ordering and how it can help your restaurant",
     "SUPPORT_TITLE": "Support",
     "SUPPORT_DESCRIPTION": "Find answers to your questions and get help with Fox Ordering",
+    "ORDER_ONLINE_TITLE": "Order Online",
+    "ORDER_ONLINE_DESCRIPTION": "Order food from your favorite restaurants with Fox Ordering",
     "BLOG_TITLE": "Blog",
     "BLOG_DESCRIPTION": "Read the latest news and updates from Fox Ordering"
   },
@@ -207,6 +209,84 @@
       "PLACEHOLDER_MESSAGE": "Write your message here",
       "BUTTON": "Send"
     }
+  },
+  "ORDER_ONLINE": {
+    "HERO_TITLE": "Order Online",
+    "HERO_SUBTITLE": "Hungry? Skip the wait and order online now!",
+    "STEP_1": "Download App",
+    "STEP_2": "Enter your Address",
+    "STEP_3": "Choose Restaurant",
+    "STEP_4": "Place Order",
+    "PAYMENT_METHODS_TITLE": "We accept a wide variety of payments:",
+    "REGIONS_TITLE": "Active in:",
+    "REGIONS_COUNTRY_1": "United States",
+    "REGIONS_COUNTRY_2": "Canada",
+    "STATES_UNITED_STATES": [
+      "Alabama",
+      "Alaska",
+      "Arizona",
+      "Arkansas",
+      "California",
+      "Colorado",
+      "Connecticut",
+      "Delaware",
+      "Florida",
+      "Georgia",
+      "Hawaii",
+      "Idaho",
+      "Illinois",
+      "Indiana",
+      "Iowa",
+      "Kansas",
+      "Kentucky",
+      "Louisiana",
+      "Maine",
+      "Maryland",
+      "Massachusetts",
+      "Michigan",
+      "Minnesota",
+      "Mississippi",
+      "Missouri",
+      "Montana",
+      "Nebraska",
+      "Nevada",
+      "New Hampshire",
+      "New Jersey",
+      "New Mexico",
+      "New York",
+      "North Carolina",
+      "North Dakota",
+      "Ohio",
+      "Oklahoma",
+      "Oregon",
+      "Pennsylvania",
+      "Rhode Island",
+      "South Carolina",
+      "South Dakota",
+      "Tennessee",
+      "Texas",
+      "Utah",
+      "Vermont",
+      "Virginia",
+      "Washington",
+      "West Virginia",
+      "Wisconsin",
+      "Wyoming"
+    ],
+    "STATES_CANADA": [
+      "Alberta",
+      "British Columbia",
+      "Manitoba",
+      "New Brunswick",
+      "Newfoundland and Labrador",
+      "Northwest Territories",
+      "Nova Scotia",
+      "Ontario",
+      "Prince Edward Island",
+      "Quebec",
+      "Saskatchewan",
+      "Yukon"
+    ]
   },
   "BLOG": {
     "HERO_TITLE": "Meet our <strong>Blog</strong>"
