--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -6,6 +6,8 @@
     "WHAT_WE_OFFER_DESCRIPTION": "Descubre los beneficios de Fox Ordering y cómo puede ayudar a tu restaurante",
     "SUPPORT_TITLE": "Soporte",
     "SUPPORT_DESCRIPTION": "¿Necesitas ayuda? Encuentra respuestas a tus preguntas aquí",
+    "ORDER_ONLINE_TITLE": "Ordena en Línea",
+    "ORDER_ONLINE_DESCRIPTION": "Ordena en línea desde tu restaurante favorito con Fox Ordering",
     "BLOG_TITLE": "Blog",
     "BLOG_DESCRIPTION": "Lee las últimas noticias y actualizaciones de Fox Ordering"
   },
@@ -207,6 +209,84 @@
       "PLACEHOLDER_MESSAGE": "Escribe tu mensaje aquí",
       "BUTTON": "Enviar"
     }
+  },
+  "ORDER_ONLINE": {
+    "HERO_TITLE": "Ordena en Línea",
+    "HERO_SUBTITLE": "¿Hambre? ¡Evita la espera y ordena en línea ahora mismo!",
+    "STEP_1": "Descargar App",
+    "STEP_2": "Ingresa tu Dirección",
+    "STEP_3": "Escoge Restaurante",
+    "STEP_4": "Realizar Pedido",
+    "PAYMENT_METHODS_TITLE": "Aceptamos una amplia variedad de pagos:",
+    "REGIONS_TITLE": "Activos en:",
+    "REGIONS_COUNTRY_1": "Estados Unidos",
+    "REGIONS_COUNTRY_2": "Canadá",
+    "STATES_UNITED_STATES": [
+      "Alabama",
+      "Alaska",
+      "Arizona",
+      "Arkansas",
+      "California",
+      "Carolina del Norte",
+      "Carolina del Sur",
+      "Colorado",
+      "Connecticut",
+      "Dakota del Norte",
+      "Dakota del Sur",
+      "Delaware",
+      "Florida",
+      "Georgia",
+      "Hawái",
+      "Idaho",
+      "Illinois",
+      "Indiana",
+      "Iowa",
+      "Kansas",
+      "Kentucky",
+      "Luisiana",
+      "Maine",
+      "Maryland",
+      "Massachusetts",
+      "Míchigan",
+      "Minnesota",
+      "Misisipi",
+      "Misuri",
+      "Montana",
+      "Nebraska",
+      "Nevada",
+      "Nueva Hampshire",
+      "Nueva Jersey",
+      "Nueva York",
+      "Nuevo México",
+      "Ohio",
+      "Oklahoma",
+      "Oregón",
+      "Pensilvania",
+      "Rhode Island",
+      "Tennessee",
+      "Texas",
+      "Utah",
+      "Vermont",
+      "Virginia",
+      "Virginia Occidental",
+      "Washington",
+      "Wisconsin",
+      "Wyoming"
+    ],
+    "STATES_CANADA": [
+      "Alberta",
+      "British Columbia",
+      "Manitoba",
+      "New Brunswick",
+      "Newfoundland and Labrador",
+      "Northwest Territories",
+      "Nova Scotia",
+      "Ontario",
+      "Prince Edward Island",
+      "Quebec",
+      "Saskatchewan",
+      "Yukon"
+    ]
   },
   "BLOG": {
     "HERO_TITLE": "Conoce nuestro <strong>Blog</strong>"
